--- a/registration-page.html
+++ b/registration-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registration</title>
 </head>
 <body>
     <form action="action_page.php" method="post">
@@ -19,7 +19,7 @@
           <label for="psw"><b>Password</b></label>
           <input type="password" placeholder="Enter Password" name="psw" required>
       
-          <button type="submit">Login</button>
+          <button type="submit">Register</button>
           <label>
             <input type="checkbox" checked="checked" name="remember"> Remember me
           </label>
