#1 - Brought a new coat of paint to the login page

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Back!</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Lora&display=swap');*{box-sizing:border-box;font-family:'Fira Sans',serif,sans-serif}body{margin:0;padding:0;display:flex;justify-content:center;align-items:center;min-height:100vh;background-image:url('https://images.unsplash.com/photo-1462331321792-cc44368b8894?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2153&q=80');background-size:cover;backdrop-filter:blur(4px)}main{display:block}h1{font-family:Lora,serif,sans-serif;font-size:2.8rem;text-align:center;}h1,h2,p{color:#f3fffc}.loginbox-container{margin:0 auto}.loginbox{height:32vh;width:20vw;padding:1vw;background-color:rgba(140,197,186,.93);border-radius:8px}label{color:#011b16;font-size:1rem;font-style:italic}input{margin-top:1.3vh;margin-bottom:1.3vh;padding:.3vw;width:18vw;height:4vh;border:1px solid #011b16;border-radius:4px;font-size:1.2rem}a{text-decoration:none}p{margin:0}p.forgot{font-size:.8rem;font-style:italic;color:#7c551b}p.forgot:hover{color:#3a856e}button{margin-top:1vh;width:100%;height:3.5vh;border:1px solid #011b16;border-radius:4px;background-color:#409d81;color:#f3fffc}button:hover{background-color:#12eeac;color:#011b16}
+      @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Lora&display=swap');*{box-sizing:border-box;font-family:'Fira Sans',serif,sans-serif}body{margin:0;padding:0;display:flex;justify-content:center;align-items:center;min-height:100vh;background-image:url('https://images.unsplash.com/photo-1462331321792-cc44368b8894?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2153&q=80');background-size:cover;backdrop-filter: blur(4px)}main{display:block}h1{font-family:Lora,serif,sans-serif;font-size:2.25rem;text-align:center}h1,h2,p{color:rgb(243, 255, 252)}.loginbox-container{margin:0 auto}.loginbox{width:20vw;padding:1vw;background-color:rgba(140, 197, 186, 0.93);border-radius:8px}label{color:rgb(1, 27, 22);font-size:1rem;font-style:italic}input{margin-top:1.3vh;margin-bottom:1.3vh;padding:0.3vw;width:18vw;height:4vh;border:1px solid rgb(1, 27, 22);border-radius:4px;font-size:1.2rem}a{text-decoration:none}p{margin:0}p.forgot{font-size:0.8rem;font-style:italic;color:rgb(124, 85, 27)}p.forgot:hover{color:rgb(58, 133, 110)}button{margin-top:1vh;width:100%;height:3.5vh;border:1px solid rgb(1, 27, 22);border-radius:4px;background-color:rgb(64, 157, 129);color:rgb(243, 255, 252)}button:hover{background-color:rgb(18, 238, 172);color:rgb(1, 27, 22)}button.signup{margin-top:1vh;width:100%;height:3.5vh;border:1px solid rgb(1, 27, 22);border-radius:4px;background-color:rgb(68, 129, 167);color:rgb(243, 252, 255)}
     </style>
 </head>
 <body>
@@ -22,6 +22,7 @@
               <input type="password" name="password" required/>
               <a href="#"><p class="forgot">perhaps one hath lost remembrance to one's own password?</p></a>
               <button type="button" name="submit" role="button">Allow thy entrance</button>
+              <button type="button" class="signup" name="submit" role="button">Let me join this domain</button>
             </form> 
           </div>
         </div>
