#2 - Added updates to the registration page

--- a/registrationpage.html
+++ b/registrationpage.html
@@ -22,6 +22,12 @@
           <input type="text" name="username" required/>
           <label>what would be the pass-word that protects your data?</label>
           <input type="password" name="password" required/>
+          <label>confirm you truly know that which protect your data.</label>
+          <input type="password" name="password" required/>
+          <label for="myCheckbox">
+            <input type="checkbox" name="myCheckbox" id="myCheckbox">
+            I agree that all the above information are valid.
+          </label>
           <button type="button" name="submit" value="register" role="button">Enter the fray.</button>
         </form> 
       </div>
